# are-we-there-yet

./: .gitignore  Cargo.toml  Cross.toml  README.md  deno.json  mise.toml
.github/workflows/: release.yaml
old-src/: main.ts
old-src/lib/: project.ts  slugs.ts
src/: cli.rs  fs.rs  main.rs  main.ts  modrinth.rs  packwiz.rs  update.rs  version.rs
