[package]
name = "are-we-there-yet"
description = "a simple tool check if your modrinth mods are updated to a specific minecraft version"
edition = "2024"
version = "0.1.0"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
self_update = { version = "0.42.0", default-features = false, features = ["rustls"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
